# rust_vulkan_compute

./: Cargo.toml  README.md  build.rs
src/: compute.glsl  main.rs
